python/testData/inspections/AddClassFromFString.py
def f():
    print(f'{<error descr="Unresolved reference 'MyClass'">My<caret>Class</error>()}')